[gd_scene load_steps=5 format=2]

[ext_resource path="res://Enemies/Sprites/ship-0012.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Scripts/Enemy2.gd" type="Script" id=2]
[ext_resource path="res://Enemies/Sounds/hit.wav" type="AudioStream" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 4.0
height = 8.0

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
rotation = -1.5708
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ShotTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[connection signal="timeout" from="ShotTimer" to="." method="_on_ShotTimer_timeout"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
